@@ -384,6 +384,7 @@ static void
 fork_and_wait(const int exitstatus, const char* expout, const char* experr)
 {
     const pid_t pid = atf_utils_fork();
+    ATF_REQUIRE(pid != -1);
     if (pid == 0) {
         fprintf(stdout, "Some output\n");
         fprintf(stderr, "Some error\n");
@@ -405,6 +406,35 @@ ATF_TC_BODY(wait__ok, tc)
         ATF_REQUIRE(waitpid(control, &status, 0) != -1);
         ATF_REQUIRE(WIFEXITED(status));
         ATF_REQUIRE_EQ(EXIT_SUCCESS, WEXITSTATUS(status));
+    }
+}
+
+ATF_TC_WITHOUT_HEAD(wait__ok_nested);
+ATF_TC_BODY(wait__ok_nested, tc)
+{
+    const pid_t parent = atf_utils_fork();
+    ATF_REQUIRE(parent != -1);
+    if (parent == 0) {
+        const pid_t child = atf_utils_fork();
+        ATF_REQUIRE(child != -1);
+        if (child == 0) {
+            fflush(stderr);
+            fprintf(stdout, "Child output\n");
+            fflush(stdout);
+            fprintf(stderr, "Child error\n");
+            exit(50);
+        } else {
+            fprintf(stdout, "Parent output\n");
+            fprintf(stderr, "Parent error\n");
+            atf_utils_wait(child, 50, "Child output\n", "Child error\n");
+            exit(40);
+        }
+    } else {
+        atf_utils_wait(parent, 40,
+                       "Parent output\n"
+                       "subprocess stdout: Child output\n"
+                       "subprocess stderr: Child error\n",
+                       "Parent error\n");
     }
 }
 
@@ -526,6 +556,7 @@ ATF_TP_ADD_TCS(tp)
     ATF_TP_ADD_TC(tp, redirect__other);
 
     ATF_TP_ADD_TC(tp, wait__ok);
+    ATF_TP_ADD_TC(tp, wait__ok_nested);
     ATF_TP_ADD_TC(tp, wait__save_stdout);
     ATF_TP_ADD_TC(tp, wait__save_stderr);
     ATF_TP_ADD_TC(tp, wait__invalid_exitstatus);
